--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="container">
-    <h1 data-testid="slackDisplayName"></h1>
+    <h1 data-testid="slackDisplayName">Odelade Jesulona Joshua</h1>
     <img src="/images/profile.jpeg" alt="Slack Profile Picture" data-testid="slackProfilePicture" class="profile-picture">
     <p data-testid="currentTimeUTC" id="current-time"></p>
     <p data-testid="currentDay" id="current-day"></p>
@@ -29,6 +29,21 @@
       <a href="https://scrapeanyweb.site" data-testid="scrapeanywebLink" target="_blank">Scrape Any Web</a>
     </div>
   </div>
-  <script src="scripts.js"></script>
+  <script>
+    document.addEventListener('DOMContentLoaded', function() {
+      const currentTimeElem = document.getElementById('current-time');
+      const currentDayElem = document.getElementById('current-day');
+  
+      function updateTime() {
+        const now = new Date();
+        currentTimeElem.textContent = `Current Time (UTC): ${now.toUTCString().split(' ')[4]}`;
+        currentDayElem.textContent = `Current Day: ${now.toLocaleDateString('en-US', { weekday: 'long' })}`;
+      }
+  
+      updateTime();
+      setInterval(updateTime, 1000);
+    });
+  </script>
+  
 </body>
 </html>
